--- a/dx.html
+++ b/dx.html
@@ -1054,10 +1054,10 @@ function noticeOrder(s) {
         width: 70px;
         height: 70px;
         border-radius: 35px;
-        position: absolute;
+        position: fixed;
         top: 50%;
         left: 50%;
-        transform: translate(-50%, -50%);
+        /* transform: translate(-50%, -50%); */
         color: rgb(255, 255, 255);
         background-color: #000000;
         display: table-cell;
@@ -1072,6 +1072,7 @@ function noticeOrder(s) {
   </head>
 
   <body>
+   <div class="disc_label" id="dl1">5</div>
     <canvas id="canvas" width="80" height="80"></canvas>
 
     <div id="hamburger-menu">
@@ -1091,7 +1092,7 @@ function noticeOrder(s) {
 		</ul>
 	  </div>
 
-    <div class="disc_label" id="dl1">5</div>
+    
   
     <datalist id="steplist">
       <option>2</option>
