Make hires the default.

--- a/dx.html
+++ b/dx.html
@@ -16,8 +16,8 @@ var zoom = 1;
 var sc ;
 var xoff = 0 ;
 var yoff = 0 ;
-var obeyscale = 0 ;
-var scale = 1 ; // hires
+var obeyscale = 1 ; // obey hires
+var scale = 1 ;
 /*
  *   User interface parameters.
  */
