--- a/dx.html
+++ b/dx.html
@@ -805,7 +805,7 @@ function noticeOrder(s) {
          activate_hamburger_menu();
         });
         window.addEventListener("resize", doanimtrue);
-        doanim(true);
+        dorandom();
       }
 
       function check_touch_target(touch_in){
@@ -1059,7 +1059,6 @@ function noticeOrder(s) {
         position: fixed;
         top: 50%;
         left: 50%;
-        /* transform: translate(-50%, -50%); */
         color: rgb(255, 255, 255);
         background-color: #000000;
         display: table-cell;
