--- a/dx.html
+++ b/dx.html
@@ -1057,9 +1057,10 @@ function noticeOrder(s) {
         display: inline-block;
         margin: 10px 10px;
         border-radius: 10px;
-        font-size: 24px;
+        font-size: 20px;
         color: white;
       }
+
       .button-container {
         width: 587px;
         height: 80px;
@@ -1171,8 +1172,8 @@ function noticeOrder(s) {
     </datalist>
 
     <div class="button-container" id="button_container1">
-      <button class="button" id="button1" onclick="onlySlider(1)" >R<sub>1</sub></button>
-      <div class="slide_box" id="slide_box1">
+      <button class="button" id="button1" onclick="onlySlider(1)" style="color: #000000; background-color: #e3e3e3;">R<sub>1</sub></button>
+      <div class="slide_box" id="slide_box1"   style="display: block;">
         <input
           type="range"
           class="slider"
@@ -1185,8 +1186,8 @@ function noticeOrder(s) {
       </div>
 
 
-      <button class="button" id="button6" onclick="onlySlider(6)" style="color: #000000; background-color: #e3e3e3;">R<sub> </sub></button>
-      <div class="slide_box" id="slide_box6"  style="display: block;">
+      <button class="button" id="button6" onclick="onlySlider(6)" >R<sub> </sub></button>
+      <div class="slide_box" id="slide_box6">
         <input
           type="range"
           class="slider"
