Remove hires as an option.

--- a/dx.html
+++ b/dx.html
@@ -1142,7 +1142,7 @@ function noticeOrder(s) {
 		<ul>
 		  <li onclick="activate_hamburger_menu(), activate_button_container(), recolor()">Change Colorings</li>
 		  <li onclick="activate_hamburger_menu(), activate_button_container(), doanim()">Email image (tbd)</li>
-		  <li onclick="toggle_scale(), activate_hamburger_menu(), activate_button_container() ,doanim()">Toggle hires scale</li>
+<!-- <li onclick="toggle_scale(), activate_hamburger_menu(), activate_button_container() ,doanim()">Toggle hires scale</li> -->
 		  <li onclick="toggle_pttype(), activate_hamburger_menu(), activate_button_container() ,doanim()">Toggle point style</li>
 		  <li onclick="toggle_rotype(), activate_hamburger_menu(), activate_button_container() ,doanim()">Toggle rotation style</li>
 		  <li>. . .</li>
