--- a/dx.html
+++ b/dx.html
@@ -18,6 +18,7 @@ var xoff = 0 ;
 var yoff = 0 ;
 var obeyscale = 1 ; // obey hires
 var scale = 1 ;
+var color_type = true;
 /*
  *   User interface parameters.
  */
@@ -61,11 +62,15 @@ function toggle_scale() {
 function toggle_rotype() {
    dofull = !dofull
 }
-function recolor() {
+function recolor(flip) {
    for (var i=0; i<3; i++) {
       colormul[i] = Math.floor(10 + 228 * Math.random());
    }
    pallete = [];
+   if (flip){
+      color_type = !color_type
+   }
+   
    doanim();
 }
 function drawcirc(ctx, x, y, r) {
@@ -233,6 +238,34 @@ var hint = new Uint8Array(MAXCOORDS) ;
 // state 0: pick a new point and initialize
 // state 1: chase through points, and accumulate
 // state 2: render
+function define_color(){
+   if (color_type){
+      var cr = ord * colormul[0] % 251;
+      var cg = ord * colormul[1] % 241;
+      var cb = ord * colormul[2] % 239;
+   }
+   else{
+      var color1 = document.getElementById("color1").value;
+      var color2 = document.getElementById("color2").value;
+      var color3 = document.getElementById("color3").value;
+
+      var position = ord * colormul[0] % 100;
+
+      if (position <= 50) {
+         cr = Math.round(parseInt(color1.substring(1, 3), 16) * (1 - position / 50) + parseInt(color2.substring(1, 3), 16) * (position / 50));
+         cg = Math.round(parseInt(color1.substring(3, 5), 16) * (1 - position / 50) + parseInt(color2.substring(3, 5), 16) * (position / 50));
+         cb = Math.round(parseInt(color1.substring(5, 7), 16) * (1 - position / 50) + parseInt(color2.substring(5, 7), 16) * (position / 50));
+      } else {
+         position -= 50;
+         cr = Math.round(parseInt(color2.substring(1, 3), 16) * (1 - position / 50) + parseInt(color3.substring(1, 3), 16) * (position / 50));
+         cg = Math.round(parseInt(color2.substring(3, 5), 16) * (1 - position / 50) + parseInt(color3.substring(3, 5), 16) * (position / 50));
+         cb = Math.round(parseInt(color2.substring(5, 7), 16) * (1 - position / 50) + parseInt(color3.substring(5, 7), 16) * (position / 50));
+      }
+
+
+   }
+   pallete[ord] = "rgb(" + cr + "," + cg + "," + cb + ")";
+}
 function doworkfull() {
     var x, y;
     var start = performance.now();
@@ -467,10 +500,7 @@ function doworkfull() {
                 noticeOrder("" + deepest);
             }
             if (!pallete[ord]) {
-                var cr = ord * colormul[0] % 251;
-                var cg = ord * colormul[1] % 241;
-                var cb = ord * colormul[2] % 239;
-                pallete[ord] = "rgb(" + cr + "," + cg + "," + cb + ")";
+               define_color();  
             }
             if (useinfcolor) {
                ctx.fillStyle = "rgb(128,128,128)";
@@ -640,10 +670,7 @@ function doworkgen() {
                 noticeOrder("" + deepest);
             }
             if (!pallete[ord]) {
-                var cr = ord * colormul[0] % 251;
-                var cg = ord * colormul[1] % 241;
-                var cb = ord * colormul[2] % 239;
-                pallete[ord] = "rgb(" + cr + "," + cg + "," + cb + ")";
+               define_color(); 
             }
             ctx.fillStyle = pallete[ord];
             if (mindist < mincirc) {
@@ -1153,6 +1180,10 @@ function noticeOrder(s) {
   </head>
 
   <body>
+   <input type="color" id="color1" name="color1" value="#ff0000" oninput="recolor(false)">
+   <input type="color" id="color2" name="color2" value="#00ff00" oninput="recolor(false)">
+   <input type="color" id="color3" name="color3" value="#0000ff" oninput="recolor(false)">
+   
    <div class="disc_label" id="dl1">5</div>
     <canvas id="canvas" width="80" height="80"></canvas>
 
@@ -1164,7 +1195,7 @@ function noticeOrder(s) {
 
     <div id="menu">
 		<ul>
-		  <li onclick="activate_hamburger_menu(), activate_button_container(), recolor()">Change Colorings</li>
+		  <li onclick="activate_hamburger_menu(), activate_button_container(), recolor(true)">Change Color Style</li>
 		  <li onclick="activate_hamburger_menu(), activate_button_container(), doanim()">Email image (tbd)</li>
 <!-- <li onclick="toggle_scale(), activate_hamburger_menu(), activate_button_container() ,doanim()">Toggle hires scale</li> -->
 		  <li onclick="toggle_pttype(), activate_hamburger_menu(), activate_button_container() ,doanim()">Toggle point style</li>
