Add ! as a synonym for critical snap.

--- a/dx.html
+++ b/dx.html
@@ -930,6 +930,8 @@ function noticeOrder(s) {
             doanim() ;
          } else if (e.keyCode == "r".codePointAt(0)) {
             dorandom() ;
+         } else if (e.keyCode == "!".codePointAt(0)) {
+            criticalsnap() ;
          }
       } ;
 
