Updated pan to copy bitmap.

--- a/dx.html
+++ b/dx.html
@@ -93,9 +93,13 @@ function checkRendered(width, height) {
    }
 }
 var xcent = 0, calch, calcw, firstpts ;
-function doanim(rescale) {
+// typ is undefined or 0 (don't rescale, not a pan), 1 (pan), 2 (rescale)
+// 0 and 2 redraw from scratch (clear); 1 copies what was there.
+function doanim(typ) {
+    var oax = ax ;
+    var oay = ay ;
     getUIParams();
-    if (rescale) {
+    if (typ == 2) {
        zoom = 1;
        xoff = 0;
        yoff = 0;
@@ -118,7 +122,19 @@ function doanim(rescale) {
     can = Math.cos(Math.PI * 2 / an);
     sbn = -Math.sin(Math.PI * 2 / bn);
     cbn = Math.cos(Math.PI * 2 / bn);
-    ctx.clearRect(0, 0, canvas.width, canvas.height);
+    if (typ === 1) {
+       ctx.globalCompositeOperation = "copy";
+       var otrans = ctx.getTransform();
+       ctx.resetTransform();
+       ctx.drawImage(ctx.canvas, ax-oax, ay-oay, width, height);
+       ctx.globalCompositeOperation = "source-over";
+       //ctx.setTransform(otrans);
+       //ctx.clearRect(0, 0, canvas.width, canvas.height);
+       console.log("Shifted");
+    } else {
+       ctx.clearRect(0, 0, canvas.width, canvas.height);
+       console.log("Cleared");
+    }
     checkRendered(width, height) ;
     drawcirc(ctx, ax, ay, ar * sc);
     drawcirc(ctx, bx, by, br * sc);
@@ -134,8 +150,8 @@ function doanim(rescale) {
     }
     return false; // suppress submit
 }
-function doanimtrue() {
-   doanim(true);
+function doanimrescale() {
+   doanim(2);
 }
 //   Radix sort on pairs of doubles using typed arrays.
 //   Accepts a work array that has to be as large as the
@@ -724,8 +740,10 @@ function getUIParams() {
     } else {
        scale = 1;
     }
-    canvas.width = width;
-    canvas.height = height;
+    if (canvas.width != width || canvas.height != height) {
+       canvas.width = width;
+       canvas.height = height;
+    }
     ar = getvalue("range1") / radiusscale;
     br = getvalue("range3") / radiusscale;
     an = getvalue("range2");
@@ -831,8 +849,9 @@ function noticeOrder(s) {
          var lim = cr[Math.max(an, bn)][Math.min(an, bn)] ;
          if (lim !== undefined) {
             document.getElementById("range1").value = radiusscale * lim;
+            document.getElementById("range6").value = radiusscale * lim;
             document.getElementById("range3").value = radiusscale * lim;
-            doanim(true);
+            doanim();
          }
       }
       function getrr() {
@@ -862,7 +881,7 @@ function noticeOrder(s) {
                break ;
             }
          }
-         doanim(true);
+         doanim(2);
       }
 
       function start() {
@@ -873,7 +892,7 @@ function noticeOrder(s) {
 
          /* Bug with first touch on iPad --Switch to button?-- */
          hamburgerMenu.addEventListener("click", function () {activate_hamburger_menu(); });
-         window.addEventListener("resize", doanimtrue);
+         window.addEventListener("resize", doanimrescale);
 
          addEvent(window, "keydown", keypress);
          addEvent(window, "keypress", keypress);
@@ -915,16 +934,16 @@ function noticeOrder(s) {
             doanim() ;
          } else if (e.keyCode === 39) {
             xoff += -10;
-            doanim() ;
+            doanim(1) ;
          } else if (e.keyCode === 40) {
             yoff += -10;
-            doanim() ;
+            doanim(1) ;
          } else if (e.keyCode === 37) {
             xoff += 10;
-            doanim() ;
+            doanim(1) ;
          } else if (e.keyCode === 38) {
             yoff += 10;
-            doanim() ;
+            doanim(1) ;
          } else if (e.keyCode === ".".codePointAt(0)) {
             pttype = (pttype % 3) + 1 ;
             doanim() ;
@@ -1001,7 +1020,7 @@ function noticeOrder(s) {
 
           xoff = touchX/zoom + initialx;
           yoff = touchY/zoom + initialy;
-          doanim();
+          doanim(ispinching ? 0 : 1);
         }
 
         if (ispinching === true) {
@@ -1056,7 +1075,7 @@ function noticeOrder(s) {
 
           xoff = touchX/zoom + initialx;
           yoff = touchY/zoom + initialy;
-          doanim();
+          doanim(1);
          }
          activate_button_container();
       });
